# CPicoSDK

./: .gitignore  Package.swift  README.md  build.sh  env.json.tmpl  generator_vars.json  toolset.json
.github/workflows/: build-cpico-sdk-headers.yml
Example/: Package.swift  build.sh  env.json.tmpl  toolset.json
Example/.sourcekit-lsp/: config.json
Example/Sources/Example/: Example.swift
Plugins/FinalizeBinaryPlugin/: FinalizeBinaryPlugin.swift
Plugins/FinalizeBinaryPluginTool/: build.sh
Plugins/FinalizeBinaryPluginTool/Test/: CMakeLists.txt  shims.c
Plugins/GenerateCPicoSDKPlugin/: GenerateCPicoSDKPlugin.swift
Plugins/GenerateCPicoSDKPluginTool/: build.sh
Plugins/GenerateCPicoSDKPluginTool/Test/: CMakeLists.txt  Test.c  flatten_target_header.cmake  lwipopts.h
Sources/CPicoSDK/: CPicoSDK.swift
Sources/CPicoSDK/include/: CPicoSDK.h
Sources/_CPicoSDK/: module.modulemap
Sources/_CPicoSDK/include/: CPicoSDK.h
